# HaWoR-improved

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  __init__.py  api.py  cli_process.py  main.py  pyproject.toml  run.sh  run_inference.sh
hawor/utils/: process.py  smoothing.py
lib/datasets/: track_dataset.py
lib/models/: hawor.py
lib/pipeline/: bbox_cleaning.py  masked_droid_slam.py  tools.py
lib/utils/: geometry.py  imutils.py
lib/vis/: run_vis2.py
scripts/scripts_test_video/: detect_track_video.py  hawor_slam.py  hawor_video.py
tools/: eval_handpose.py  postprocess_handpose.py  render_overlay.py
