[project]
name = "hawor"
version = "1.0.0"
description = "Hand-World-Space Reconstruction from egocentric videos (CVPR 2025)"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.8",
    "torchvision>=0.23",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "pyrender==0.1.45",
    "scikit-image==0.25.2",
    "scipy>=1.12",
    "smplx==0.1.28",
    "yacs==0.1.8",
    "timm==1.0.25",
    "einops==0.8.2",
    "xtcocotools==1.14.3",
    "pandas==2.3.3",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "hydra-colorlog==1.2.0",
    "pyrootutils==1.0.4",
    "rich==14.3.3",
    "webdataset==1.0.2",
    "ultralytics==8.4.19",
    "PuLP==3.3.0",
    "supervision==0.27.0.post1",
    "pycocotools==2.0.11",
    "joblib==1.5.3",
    "natsort==8.4.0",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable",
    "evo==1.34.3",
    "pytorch-minimize==0.1.0",
    "mmengine==0.10.4",
    "HTML4Vision==0.6.1",
    "plyfile==1.1.3",
    "aitviewer==1.13.0",
    "easydict==1.13",
    "loguru==0.7.3",
    "dill==0.4.1",
    "lapx==0.9.4",
    "chumpy @ git+https://github.com/mattloper/chumpy",
    "moderngl-window==2.4.6",
    "imageio-ffmpeg==0.6.0",
    "lightning==2.6.1",
    "lightning-fabric==2.6.1",
    "lightning-utilities==0.15.3",
    "torchmetrics==1.4.0",
    "Pillow>=10.0",
    "tqdm>=4.66",
    "celery[redis]>=5.4",
    "boto3>=1.35",
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "setuptools>=82.0.0",
    "torch-scatter>=2.1.2",
    "gdown>=5.2.1",
    "omegaconf>=2.3.0",
    "mcap>=1.3.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]
torch-scatter = ["torch"]
pytorch3d = ["torch"]
